[FIX] sap.tnt.NavigationList: When collapsed the sub items in the Overflow can be selected
- in the Overflow when we have sub items they are selectable now
- arrows in the Overflow, that shaws te presene of sub items for teh item are with correct position now

SNOW: DINC0039146

--- a/src/sap.tnt/src/sap/tnt/themes/base/NavigationList.less
+++ b/src/sap.tnt/src/sap/tnt/themes/base/NavigationList.less
@@ -532,7 +532,7 @@
 		}
 
 		.sapUiMnuItmSbMnu {
-			position: relative;
+			position: static; // default one
 			display: flex;
 			align-items: center;
 			justify-content: center;
